--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           <p style="color:rgb(0, 0, 0); display:inline; margin:0;">June. '25</p>
         </td>
         <td style="vertical-align:top;">
-            One paper is under review at <strong><a href="https://arxiv.org/abs/2509.16805">CHI 2026</a></strong>.
+            One paper is under review at CHI 2026</a></strong>.
         </td>
       </tr>
 
