--- a/index.html
+++ b/index.html
@@ -100,6 +100,17 @@
   <tbody>
 
 
+              <!-- ITEM -->
+      <tr>
+        <td style="width: 80px; vertical-align:top;">  
+          <p style="color:rgb(0, 0, 0); display:inline; margin:0;">Oct. '25</p>
+        </td>
+        <td style="vertical-align:top;">
+            2 papers (Lenses, CLAMP) are under review at <strong><a href="https://cvpr.thecvf.com/">CVPR 2026</a></strong>.
+        </td>
+      </tr>
+
+
           <!-- ITEM -->
       <tr>
         <td style="width: 80px; vertical-align:top;">  
@@ -128,7 +139,7 @@
           <p style="color:rgb(0, 0, 0); display:inline; margin:0;">Aug. '25</p>
         </td>
         <td style="vertical-align:top;">
-            One paper is under review at <strong><a href="https://mathai2025.github.io/">NeurIPS2025 MathAI</a></strong>.
+            One paper is under review at <strong><a href="https://2025.emnlp.org">EMNLP 2025</a></strong>.
         </td>
       </tr>
 
