--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
               <!-- ITEM -->
       <tr>
         <td style="width: 80px; vertical-align:top;">  
-          <p style="color:rgb(0, 0, 0); display:inline; margin:0;">Oct. '25</p>
+          <p style="color:rgb(0, 0, 0); display:inline; margin:0;">Nov. '25</p>
         </td>
         <td style="vertical-align:top;">
-            2 papers (Lenses, CLAMP) are under review at <strong><a href="https://cvpr.thecvf.com/">CVPR 2026</a></strong>.
+            2 papers (Lenses and CLAMP) are under review at <strong><a href="https://cvpr.thecvf.com/">CVPR 2026</a></strong>.
         </td>
       </tr>
 
