--- a/index.html
+++ b/index.html
@@ -110,6 +110,16 @@
         </td>
       </tr>
 
+                    <!-- ITEM -->
+      <tr>
+        <td style="width: 80px; vertical-align:top;">  
+          <p style="color:rgb(0, 0, 0); display:inline; margin:0;">Nov. '25</p>
+        </td>
+        <td style="vertical-align:top;">
+            One paper (SIGMA) is accepted at <strong><a href="https://sites.google.com/view/aaai-2026-lmreasoning">AAAI 2026 LMReasoning</a></strong>.
+        </td>
+      </tr>
+
 
           <!-- ITEM -->
       <tr>
@@ -366,7 +376,7 @@
             <p style="font-weight:bold; margin:0;">Honors &amp; Awards</p>
             <hr>
             <ul>
-              <li><b>2022</b> - Awarded Pratt Fellowship, Virginia Tech</li>
+              <li><b>2025</b> - Awarded Pratt Fellowship, Virginia Tech</li>
               <li><b>2023</b> - State Program on Education of Azerbaijani Youth Abroad Scholarship</li>
               <li><b>2022</b> - 3x 1st Place, National AI Competition in ML Applications (2020-2022).</li>
               <li><b>2020</b> - Ranked among the top 15 teams at the III World Robot Olympiad in Gyor, Hungary</li>
